--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "frames",
   "scripts": {
     "build": "turbo build",
-    "clean": "pnpm run --r --parallel clean && rm -rf packages/**/*.json.tmp",
+    "clean": "pnpm run --r --parallel clean && rm -rf packages/**/*.json.tmp .turbo",
     "changeset:prepublish": "pnpm --filter './packages/*' build",
     "changeset:publish": "pnpm changeset:prepublish && changeset publish",
     "changeset:version": "pnpm install --lockfile-only && changeset version && pnpm check",
@@ -15,6 +15,8 @@
     "dev": "turbo dev",
     "docs:dev": "pnpm --filter site dev",
     "format": "biome format --write",
+    "format:check": "biome format .",         // добавлено
+    "lint": "biome lint .",                   // добавлено
     "knip": "knip",
     "preinstall": "only-allow pnpm",
     "prepare": "pnpm simple-git-hooks",
@@ -38,6 +40,7 @@
     "node": ">=22"
   },
   "simple-git-hooks": {
-    "pre-commit": "pnpm check"
+    "pre-commit": "pnpm check",
+    "prepare-commit-msg": "echo 'prepare commit msg hook'" // добавлено как заготовка
   }
 }
